# Test_Remote_MCP_Server

./: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  main.py  pyproject.toml
.claude/: settings.local.json
expense-tracker-client/: index.html  package-lock.json  package.json
expense-tracker-client/src/components/: ChatInterface.tsx  ToolCallCard.tsx
expense-tracker-client/src/hooks/: useMCPClient.ts
expense-tracker-client/src/lib/: mcp-client.ts  openai-stream.ts  types.ts
expense-tracker-client/src/store/: chat.ts  config.ts
src/: http_server.py  server.py
src/config/: settings.py
src/database/: sqlite_client.py
src/models/: expense.py
src/resources/: __init__.py  category_resource.py
src/tools/: expense_tools.py
